test/error/parse/ExpectBrace2Close.mod
MODULE ExpectBrace2Close;
VAR a: ARRAY 1 OF INTEGER;
BEGIN
  a[0;
END ExpectBrace2Close.
